--- a/src/Microsoft.DotNet.Tools.Publish/project.json
+++ b/src/Microsoft.DotNet.Tools.Publish/project.json
@@ -1,27 +1,31 @@
 ﻿{
-  "version": "1.0.0-*",
-  "compilationOptions": {
-    "emitEntryPoint": true
-  },
-  "commands": {
-    "dotnet-compile": "Microsoft.DotNet.Cli"
-  },
-  "dependencies": {
-    "System.Console": "4.0.0-*",
-    "System.Collections": "4.0.11-*",
-    "System.Linq": "4.0.1-*",
-    "System.Diagnostics.Process": "4.1.0-*",
-    "System.IO.FileSystem": "4.0.1-*",
-    "Microsoft.DotNet.Cli.Utils": {
-      "type": "build",
-      "version": "1.0.0-*"
+    "version": "1.0.0-*",
+    "compilationOptions": {
+        "emitEntryPoint": true
     },
-    "Microsoft.Framework.CommandLineUtils.Sources": {
-      "type": "build",
-      "version": "1.0.0-*"
+    "commands": {
+        "dotnet-publish": "Microsoft.DotNet.Tools.Publish"
+    },
+    "dependencies": {
+        "Microsoft.NETCore.ConsoleHost": "1.0.0-*",
+        "Microsoft.NETCore.Runtime": "1.0.1-*",
+
+        "System.Console": "4.0.0-*",
+        "System.Collections": "4.0.11-*",
+        "System.Linq": "4.0.1-*",
+        "System.Diagnostics.Process": "4.1.0-*",
+        "System.IO.FileSystem": "4.0.1-*",
+        "Microsoft.Extensions.ProjectModel": "1.0.0-*",
+        "Microsoft.DotNet.Cli.Utils": {
+            "type": "build",
+            "version": "1.0.0-*"
+        },
+        "Microsoft.Framework.CommandLineUtils.Sources": {
+            "type": "build",
+            "version": "1.0.0-*"
+        }
+    },
+    "frameworks": {
+        "dnxcore50": { }
     }
-  },
-  "frameworks": {
-    "dnxcore50": { }
-  }
 }
