--- a/src/Microsoft.DotNet.Tools.Publish/project.json
+++ b/src/Microsoft.DotNet.Tools.Publish/project.json
@@ -20,7 +20,7 @@
             "type": "build",
             "version": "1.0.0-*"
         },
-        "Microsoft.Framework.CommandLineUtils.Sources": {
+        "Microsoft.Extensions.CommandLineUtils.Sources": {
             "type": "build",
             "version": "1.0.0-*"
         }
