--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -1,32 +1,33 @@
 ﻿{
-    "version": "1.0.0-*",
-    "compilationOptions": {
-        "emitEntryPoint": true
-    },
-    "commands": {
-        "dotnet-compile": "Microsoft.DotNet.Tools.Compiler"
-    },
-    "dependencies": {
-        "Microsoft.NETCore.TestHost": "1.0.0-*",
-        "Microsoft.NETCore.Runtime": "1.0.1-*",
+  "name": "dotnet-compile",
+  "version": "1.0.0-*",
+  "compilationOptions": {
+    "emitEntryPoint": true
+  },
+  "commands": {
+    "dotnet-compile": "Microsoft.DotNet.Tools.Compiler"
+  },
+  "dependencies": {
+    "Microsoft.NETCore.TestHost": "1.0.0-*",
+    "Microsoft.NETCore.Runtime": "1.0.1-*",
 
-        "System.Console": "4.0.0-*",
-        "System.Collections": "4.0.11-*",
-        "System.Linq": "4.0.1-*",
-        "System.Diagnostics.Process": "4.1.0-*",
-        "System.IO.FileSystem": "4.0.1-*",
-        "Microsoft.Extensions.ProjectModel": "1.0.0-*",
-        "Microsoft.DotNet.Cli.Utils": {
-            "type": "build",
-            "version": "1.0.0-*"
-        },
-        "Microsoft.Extensions.CommandLineUtils.Sources": {
-            "type": "build",
-            "version": "1.0.0-*"
-        },
-        "Microsoft.Net.Compilers.netcore": "1.1.0-*"
+    "System.Console": "4.0.0-*",
+    "System.Collections": "4.0.11-*",
+    "System.Linq": "4.0.1-*",
+    "System.Diagnostics.Process": "4.1.0-*",
+    "System.IO.FileSystem": "4.0.1-*",
+    "Microsoft.Extensions.ProjectModel": "1.0.0-*",
+    "Microsoft.DotNet.Cli.Utils": {
+      "type": "build",
+      "version": "1.0.0-*"
     },
-    "frameworks": {
-        "dnxcore50": { }
-    }
+    "Microsoft.Extensions.CommandLineUtils.Sources": {
+      "type": "build",
+      "version": "1.0.0-*"
+    },
+    "Microsoft.Net.Compilers.netcore": "1.1.0-*"
+  },
+  "frameworks": {
+    "dnxcore50": { }
+  }
 }
