--- a/src/Microsoft.DotNet.Tools.Publish/project.json
+++ b/src/Microsoft.DotNet.Tools.Publish/project.json
@@ -1,30 +1,31 @@
 ﻿{
-    "version": "1.0.0-*",
-    "compilationOptions": {
-        "emitEntryPoint": true
+  "name": "dotnet-publish",
+  "version": "1.0.0-*",
+  "compilationOptions": {
+    "emitEntryPoint": true
+  },
+  "commands": {
+    "dotnet-publish": "Microsoft.DotNet.Tools.Publish"
+  },
+  "dependencies": {
+    "Microsoft.NETCore.Runtime": "1.0.1-*",
+    "System.Console": "4.0.0-*",
+    "System.Collections": "4.0.11-*",
+    "System.Linq": "4.0.1-*",
+    "System.Diagnostics.Process": "4.1.0-*",
+    "System.IO.FileSystem": "4.0.1-*",
+    "Microsoft.Extensions.ProjectModel": "1.0.0-*",
+    "Microsoft.DotNet.Cli.Utils": {
+      "type": "build",
+      "version": "1.0.0-*"
     },
-    "commands": {
-        "dotnet-publish": "Microsoft.DotNet.Tools.Publish"
+    "Microsoft.Extensions.CommandLineUtils.Sources": {
+      "type": "build",
+      "version": "1.0.0-*"
     },
-    "dependencies": {
-        "Microsoft.NETCore.Runtime": "1.0.1-*",
-        "System.Console": "4.0.0-*",
-        "System.Collections": "4.0.11-*",
-        "System.Linq": "4.0.1-*",
-        "System.Diagnostics.Process": "4.1.0-*",
-        "System.IO.FileSystem": "4.0.1-*",
-        "Microsoft.Extensions.ProjectModel": "1.0.0-*",
-        "Microsoft.DotNet.Cli.Utils": {
-            "type": "build",
-            "version": "1.0.0-*"
-        },
-        "Microsoft.Extensions.CommandLineUtils.Sources": {
-            "type": "build",
-            "version": "1.0.0-*"
-        },
-        "System.AppContext": "4.0.1-*"
-    },
-    "frameworks": {
-        "dnxcore50": { }
-    }
+    "System.AppContext": "4.0.1-*"
+  },
+  "frameworks": {
+    "dnxcore50": { }
+  }
 }
