--- a/src/Microsoft.Extensions.ProjectModel/project.json
+++ b/src/Microsoft.Extensions.ProjectModel/project.json
@@ -1,24 +1,30 @@
 ﻿{
-    "version": "1.0.0-*",
-    "description": "Types to model a .NET Project",
+  "version": "1.0.0-*",
+  "description": "Types to model a .NET Project",
 
-    "dependencies": {
-        "Microsoft.CSharp": "4.0.1-*",
-        "System.Collections": "4.0.11-*",
-        "System.Linq": "4.0.1-*",
-        "System.Threading.Thread": "4.0.0-*",
-        "System.Runtime.Loader": "4.0.0-*",
-        "System.Dynamic.Runtime": "4.0.11-*",
-        "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-*",
+  "dependencies": {
+    "Microsoft.CSharp": "4.0.1-*",
+    "System.Collections": "4.0.11-*",
+    "System.Linq": "4.0.1-*",
+    "System.Threading.Thread": "4.0.0-*",
+    "System.Runtime.Loader": "4.0.0-*",
+    "System.Dynamic.Runtime": "4.0.11-*",
+    "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-*",
 
-        "NuGet.Packaging": "3.2.0",
+    "NuGet.Packaging": "3.2.0",
 
-        "Microsoft.Extensions.FileSystemGlobbing": "1.0.0-*",
-        "Microsoft.Extensions.JsonParser.Sources": { "type": "build", "version": "1.0.0-*" },
-        "Microsoft.Extensions.HashCodeCombiner.Sources": { "type": "build", "version": "1.0.0-*" }
+    "Microsoft.Extensions.FileSystemGlobbing": "1.0.0-*",
+    "Microsoft.Extensions.JsonParser.Sources": {
+      "type": "build",
+      "version": "1.0.0-*"
     },
-
-    "frameworks": {
-        "dnxcore50": { }
+    "Microsoft.Extensions.HashCodeCombiner.Sources": {
+      "type": "build",
+      "version": "1.0.0-*"
     }
+  },
+
+  "frameworks": {
+    "dnxcore50": { }
+  }
 }
