Changes to dotnet-compile - Split dotnet-compile into dotnet-compile and dotnet-compile-{compiler} - We still need to figure out the protocol and responsibility but this change adds the needed indirection so that compilers can do their thing. - Updated the bootstrap script and kept the commands since we need them to bootstrap the world until we get updates.
#52

--- a/src/Microsoft.DotNet.Tools.Compiler.Csc/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler.Csc/project.json
@@ -1,23 +1,31 @@
-{
-  "name": "dotnet",
+﻿{
+  "name": "dotnet-compile-csc",
   "version": "1.0.0-*",
   "compilationOptions": {
     "emitEntryPoint": true
   },
   "commands": {
-    "dotnet": "Microsoft.DotNet.Cli"
+    "dotnet-compile-csc": "Microsoft.DotNet.Tools.Compiler.Csc"
   },
   "dependencies": {
+    "Microsoft.NETCore.TestHost": "1.0.0-*",
     "Microsoft.NETCore.Runtime": "1.0.1-*",
 
     "System.Console": "4.0.0-*",
     "System.Collections": "4.0.11-*",
     "System.Linq": "4.0.1-*",
     "System.Diagnostics.Process": "4.1.0-*",
+    "System.IO.FileSystem": "4.0.1-*",
+    "Microsoft.Extensions.ProjectModel": "1.0.0-*",
     "Microsoft.DotNet.Cli.Utils": {
       "type": "build",
       "version": "1.0.0-*"
-    }
+    },
+    "Microsoft.Extensions.CommandLineUtils.Sources": {
+      "type": "build",
+      "version": "1.0.0-*"
+    },
+    "Microsoft.Net.Compilers.netcore": "1.1.0-*"
   },
   "frameworks": {
     "dnxcore50": { }
