--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -4,6 +4,9 @@
   "compilationOptions": {
     "emitEntryPoint": true
   },
+  "commands": {
+    "dotnet-compile": "Microsoft.DotNet.Tools.Compiler"
+  },
   "dependencies": {
     "Microsoft.NETCore.TestHost": "1.0.0-*",
     "Microsoft.NETCore.Runtime": "1.0.1-*",
