--- a/src/Microsoft.Extensions.ProjectModel/project.json
+++ b/src/Microsoft.Extensions.ProjectModel/project.json
@@ -12,7 +12,7 @@
     "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-*",
 
     "NuGet.Packaging": "3.2.0",
-    "System.Security.Cryptography.Algorithms": "4.0.0-*",
+    "System.Security.Cryptography.Algorithms": "4.0.0-beta-23401",
 
     "Microsoft.Extensions.FileSystemGlobbing": "1.0.0-*",
     "Microsoft.Extensions.JsonParser.Sources": {
