Downgrade the runtime to -23413
It appears the compiler is crashing with an ExecutionEngineException
while trying to load the resource satellite assembly on -23419. Until
this is fixed we should downgrade to -23413.

--- a/src/Microsoft.DotNet.Tools.Compiler.Csc/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler.Csc/project.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "Microsoft.NETCore.TestHost": "1.0.0-*",
-    "Microsoft.NETCore.Runtime": "1.0.1-*",
+    "Microsoft.NETCore.Runtime": "1.0.1-beta-23413",
 
     "System.Console": "4.0.0-*",
     "System.Collections": "4.0.11-*",
