--- a/src/Microsoft.DotNet.Tools.Publish/project.json
+++ b/src/Microsoft.DotNet.Tools.Publish/project.json
@@ -8,7 +8,7 @@
     "dotnet-publish": "Microsoft.DotNet.Tools.Publish"
   },
   "dependencies": {
-    "Microsoft.NETCore.Runtime": "1.0.1-*",
+    "Microsoft.NETCore.Runtime": "1.0.1-beta-23413",
     "System.Console": "4.0.0-*",
     "System.Collections": "4.0.11-*",
     "System.Linq": "4.0.1-*",
