--- a/src/Microsoft.DotNet.Cli/project.json
+++ b/src/Microsoft.DotNet.Cli/project.json
@@ -8,7 +8,7 @@
     "dotnet": "Microsoft.DotNet.Cli"
   },
   "dependencies": {
-    "Microsoft.NETCore.Runtime": "1.0.1-*",
+    "Microsoft.NETCore.Runtime": "1.0.1-beta-23413",
 
     "System.Console": "4.0.0-*",
     "System.Collections": "4.0.11-*",
