--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "Microsoft.NETCore.TestHost": "1.0.0-*",
-    "Microsoft.NETCore.Runtime": "1.0.1-*",
+    "Microsoft.NETCore.Runtime": "1.0.1-beta-23413",
 
     "System.Console": "4.0.0-*",
     "System.Collections": "4.0.11-*",
