Create (de)serializer for CompilerOptions
This allows language-specific compile utilities to map a set of
common arguments to their compiler's specific argument set.

--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -14,6 +14,7 @@
     "System.IO.FileSystem": "4.0.1-beta-23502",
 
     "Microsoft.DotNet.ProjectModel": "1.0.0-*",
+    "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
     "Microsoft.DotNet.Cli.Utils": {
       "type": "build",
       "version": "1.0.0-*"
