--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -11,11 +11,11 @@
     "Microsoft.NETCore.TestHost": "1.0.0-*",
     "Microsoft.NETCore.Runtime": "1.0.1-beta-23413",
 
-    "System.Console": "4.0.0-*",
-    "System.Collections": "4.0.11-*",
-    "System.Linq": "4.0.1-*",
-    "System.Diagnostics.Process": "4.1.0-*",
-    "System.IO.FileSystem": "4.0.1-*",
+    "System.Console": "4.0.0-beta-23419",
+    "System.Collections": "4.0.11-beta-23419",
+    "System.Linq": "4.0.1-beta-23419",
+    "System.Diagnostics.Process": "4.1.0-beta-23419",
+    "System.IO.FileSystem": "4.0.1-beta-23419",
     "Microsoft.Extensions.ProjectModel": "1.0.0-*",
     "Microsoft.DotNet.Cli.Utils": {
       "type": "build",
