--- a/src/Microsoft.DotNet.Tools.Resgen/project.json
+++ b/src/Microsoft.DotNet.Tools.Resgen/project.json
@@ -8,13 +8,13 @@
     "resgen": "Microsoft.DotNet.Tools.Resgen"
   },
   "dependencies": {
-    "Microsoft.NETCore.TestHost": "1.0.0-*",
-    "Microsoft.NETCore.Runtime": "1.0.1-beta-23413",
-    "System.Console": "4.0.0-*",
-    "System.Collections": "4.0.11-*",
-    "System.Linq": "4.0.1-*",
-    "System.Diagnostics.Process": "4.1.0-*",
-    "System.IO.FileSystem": "4.0.1-*",
+    "Microsoft.NETCore.TestHost": "1.0.0-beta-23419",
+    "Microsoft.NETCore.Runtime": "1.0.1-beta-23419",
+    "System.Console": "4.0.0-beta-23419",
+    "System.Collections": "4.0.11-beta-23419",
+    "System.Linq": "4.0.1-beta-23419",
+    "System.Diagnostics.Process": "4.1.0-beta-23419",
+    "System.IO.FileSystem": "4.0.1-beta-23419",
     "Microsoft.DotNet.Cli.Utils": {
       "type": "build",
       "version": "1.0.0-*"
@@ -23,8 +23,8 @@
       "type": "build",
       "version": "1.0.0-*"
     },
-    "System.Xml.XDocument": "4.0.11-*",
-    "System.Resources.ReaderWriter": "4.0.0-*"
+    "System.Xml.XDocument": "4.0.11-beta-23419",
+    "System.Resources.ReaderWriter": "4.0.0-beta-23419"
   },
   "frameworks": {
     "dnxcore50": { }
