--- a/src/Microsoft.Extensions.ProjectModel/project.json
+++ b/src/Microsoft.Extensions.ProjectModel/project.json
@@ -3,18 +3,18 @@
   "description": "Types to model a .NET Project",
 
   "dependencies": {
-    "Microsoft.CSharp": "4.0.1-*",
-    "System.Collections": "4.0.11-*",
-    "System.Linq": "4.0.1-*",
-    "System.Threading.Thread": "4.0.0-*",
-    "System.Runtime.Loader": "4.0.0-*",
-    "System.Dynamic.Runtime": "4.0.11-*",
-    "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-*",
+    "Microsoft.CSharp": "4.0.1-beta-23419",
+    "System.Collections": "4.0.11-beta-23419",
+    "System.Linq": "4.0.1-beta-23419",
+    "System.Threading.Thread": "4.0.0-beta-23419",
+    "System.Runtime.Loader": "4.0.0-beta-23419",
+    "System.Dynamic.Runtime": "4.0.11-beta-23419",
+    "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-beta-23419",
 
     "NuGet.Packaging": "3.2.0",
     "System.Security.Cryptography.Algorithms": "4.0.0-beta-23401",
 
-    "Microsoft.Extensions.FileSystemGlobbing": "1.0.0-*",
+    "Microsoft.Extensions.FileSystemGlobbing": "1.0.0-beta-23419",
     "Microsoft.Extensions.JsonParser.Sources": {
       "type": "build",
       "version": "1.0.0-*"
