Remove compiler name autodetection
Also add compilerName: csc to every project.json to compensate.

--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "name": "dotnet-compile",
   "version": "1.0.0-*",
+  "compilerName": "csc",
   "compilationOptions": {
     "emitEntryPoint": true
   },
