--- a/src/Microsoft.DotNet.Cli/project.json
+++ b/src/Microsoft.DotNet.Cli/project.json
@@ -1,6 +1,7 @@
 {
   "name": "dotnet",
   "version": "1.0.0-*",
+  "compilerName": "csc",
   "compilationOptions": {
     "emitEntryPoint": true
   },
