--- a/src/Microsoft.DotNet.Tools.Publish/project.json
+++ b/src/Microsoft.DotNet.Tools.Publish/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "name": "dotnet-publish",
   "version": "1.0.0-*",
+  "compilerName": "csc",
   "compilationOptions": {
     "emitEntryPoint": true
   },
