--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -4,13 +4,13 @@
     "shared": "**/*.cs",
 
     "dependencies": {
-        "System.Console": "4.0.0-beta-*",
-        "System.IO.FileSystem": "4.0.1-beta-*",
-        "System.Diagnostics.Process": "4.1.0-beta-*",
-        "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-beta-*",
+        "System.Console": "4.0.0-beta-23428",
+        "System.IO.FileSystem": "4.0.1-beta-23428",
+        "System.Diagnostics.Process": "4.1.0-beta-23428",
+        "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-beta-23428",
 
-        "Microsoft.NETCore.ConsoleHost": "1.0.0-beta-*",
-        "Microsoft.NETCore.TestHost": "1.0.0-beta-*"
+        "Microsoft.NETCore.ConsoleHost": "1.0.0-beta-23428",
+        "Microsoft.NETCore.TestHost": "1.0.0-beta-23428"
     },
     "frameworks": {
         "dnxcore50": { }
