--- a/src/Microsoft.DotNet.Tools.Resgen/project.json
+++ b/src/Microsoft.DotNet.Tools.Resgen/project.json
@@ -8,15 +8,16 @@
     "resgen": "Microsoft.DotNet.Tools.Resgen"
   },
   "dependencies": {
-    "Microsoft.NETCore.TestHost": "1.0.0-beta-*",
-    "Microsoft.NETCore.Runtime": "1.0.1-beta-*",
-    "System.Console": "4.0.0-beta-*",
-    "System.Collections": "4.0.11-beta-*",
-    "System.Linq": "4.0.1-beta-*",
-    "System.Diagnostics.Process": "4.1.0-beta-*",
-    "System.IO.FileSystem": "4.0.1-beta-*",
-    "System.Xml.XDocument": "4.0.11-beta-*",
-    "System.Resources.ReaderWriter": "4.0.0-beta-*",
+    "Microsoft.NETCore.TestHost": "1.0.0-beta-23428",
+    "Microsoft.NETCore.Runtime": "1.0.1-beta-23428",
+    "System.Console": "4.0.0-beta-23428",
+    "System.Collections": "4.0.11-beta-23428",
+    "System.Linq": "4.0.1-beta-23428",
+    "System.Diagnostics.Process": "4.1.0-beta-23428",
+    "System.IO.FileSystem": "4.0.1-beta-23428",
+    "System.Xml.XDocument": "4.0.11-beta-23428",
+    "System.Resources.ReaderWriter": "4.0.0-beta-23428",
+
     "Microsoft.DotNet.Cli.Utils": {
       "type": "build",
       "version": "1.0.0-*"
