--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -16,7 +16,7 @@
     "System.Diagnostics.Process": "4.1.0-beta-23428",
     "System.IO.FileSystem": "4.0.1-beta-23428",
 
-    "Microsoft.Extensions.ProjectModel": "1.0.0-*",
+    "Microsoft.DotNet.ProjectModel": "1.0.0-*",
     "Microsoft.DotNet.Cli.Utils": {
       "type": "build",
       "version": "1.0.0-*"
