--- a/src/Microsoft.DotNet.Tools.Interactive.Csi/project.json
+++ b/src/Microsoft.DotNet.Tools.Interactive.Csi/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "name": "dotnet-compile",
+  "name": "dotnet-interactive-csi",
   "version": "1.0.0-*",
   "compilationOptions": {
     "emitEntryPoint": true
@@ -14,8 +14,6 @@
     "System.IO.FileSystem": "4.0.1-beta-23504",
     "System.AppContext": "4.0.1-beta-23504",
 
-    "Microsoft.DotNet.ProjectModel": "1.0.0-*",
-    "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
     "Microsoft.DotNet.Cli.Utils": {
       "type": "build",
       "version": "1.0.0-*"
