--- a/src/Microsoft.DotNet.Tools.Interactive/project.json
+++ b/src/Microsoft.DotNet.Tools.Interactive/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "name": "dotnet-compile",
+  "name": "dotnet-interactive",
   "version": "1.0.0-*",
   "compilationOptions": {
     "emitEntryPoint": true
@@ -12,10 +12,8 @@
     "System.Linq": "4.0.1-beta-23504",
     "System.Diagnostics.Process": "4.1.0-beta-23504",
     "System.IO.FileSystem": "4.0.1-beta-23504",
-    "System.AppContext": "4.0.1-beta-23504",
 
     "Microsoft.DotNet.ProjectModel": "1.0.0-*",
-    "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
     "Microsoft.DotNet.Cli.Utils": {
       "type": "build",
       "version": "1.0.0-*"
