--- a/src/Microsoft.DotNet.Tools.Run/project.json
+++ b/src/Microsoft.DotNet.Tools.Run/project.json
@@ -1,5 +1,5 @@
-{
-  "name": "dotnet",
+﻿{
+  "name": "dotnet-run",
   "version": "1.0.0-*",
   "compilationOptions": {
     "emitEntryPoint": true
@@ -11,6 +11,9 @@
     "System.Collections": "4.0.11-beta-23428",
     "System.Linq": "4.0.1-beta-23428",
     "System.Diagnostics.Process": "4.1.0-beta-23428",
+    "System.IO.FileSystem": "4.0.1-beta-23428",
+
+    "Microsoft.DotNet.ProjectModel": "1.0.0-*",
     "Microsoft.DotNet.Cli.Utils": {
       "type": "build",
       "version": "1.0.0-*"
@@ -18,7 +21,8 @@
     "Microsoft.Extensions.CommandLineUtils.Sources": {
       "type": "build",
       "version": "1.0.0-*"
-    }
+    },
+    "Microsoft.Net.Compilers.netcore": "1.1.0-*"
   },
   "frameworks": {
     "dnxcore50": { }
