this should fix cmake on Ubuntu 14.04

--- a/src/corehost/CMakeLists.txt
+++ b/src/corehost/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 3.1)
+cmake_minimum_required (VERSION 2.6)
 project (corehost)
 set (CMAKE_CXX_STANDARD 11)
 include_directories(inc)
@@ -26,6 +26,11 @@ else()
 endif()
 
 add_executable(corehost ${SOURCES})
+
+# Older CMake doesn't support CMAKE_CXX_STANDARD and GCC/Clang need a switch to enable C++ 11
+if(${CMAKE_CXX_COMPILER_ID} MATCHES "(Clang|GCC)")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+endif()
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     add_definitions(-D__LINUX__)
