--- a/src/Microsoft.DotNet.Tools.Interactive.Csi/project.json
+++ b/src/Microsoft.DotNet.Tools.Interactive.Csi/project.json
@@ -21,7 +21,8 @@
     "Microsoft.Extensions.CommandLineUtils.Sources": {
       "type": "build",
       "version": "1.0.0-*"
-    }
+    },
+    "Microsoft.Net.CSharp.Interactive.netcore": "1.1.0-*"
   },
   "frameworks": {
     "dnxcore50": { }
