--- a/src/Microsoft.DotNet.Tools.Repl.Csi/project.json
+++ b/src/Microsoft.DotNet.Tools.Repl.Csi/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "name": "dotnet-interactive",
+  "name": "dotnet-repl-csi",
   "version": "1.0.0-*",
   "compilationOptions": {
     "emitEntryPoint": true
@@ -12,8 +12,8 @@
     "System.Linq": "4.0.1-beta-23504",
     "System.Diagnostics.Process": "4.1.0-beta-23504",
     "System.IO.FileSystem": "4.0.1-beta-23504",
+    "System.AppContext": "4.0.1-beta-23504",
 
-    "Microsoft.DotNet.ProjectModel": "1.0.0-*",
     "Microsoft.DotNet.Cli.Utils": {
       "type": "build",
       "version": "1.0.0-*"
@@ -21,7 +21,8 @@
     "Microsoft.Extensions.CommandLineUtils.Sources": {
       "type": "build",
       "version": "1.0.0-*"
-    }
+    },
+    "Microsoft.Net.CSharp.Interactive.netcore": "1.1.0-*"
   },
   "frameworks": {
     "dnxcore50": { }
