Update Microsoft.Net.CSharp.Interactive.netcore version

--- a/src/Microsoft.DotNet.Tools.Run/project.json
+++ b/src/Microsoft.DotNet.Tools.Run/project.json
@@ -22,7 +22,7 @@
       "type": "build",
       "version": "1.0.0-*"
     },
-    "Microsoft.Net.Compilers.netcore": "1.1.0-*"
+    "Microsoft.Net.Compilers.netcore": "1.2.0-beta-20151106-02"
   },
   "frameworks": {
     "dnxcore50": { }
