--- a/src/Microsoft.DotNet.Tools.Compiler.Csc/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler.Csc/project.json
@@ -22,7 +22,7 @@
             "version": "1.0.0-*"
         },
         "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
-        "Microsoft.Net.Compilers.netcore": "1.1.0-*"
+        "Microsoft.Net.Compilers.netcore": "1.2.0-beta-20151106-02"
     },
     "frameworks": {
         "dnxcore50": { }
