--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -6,11 +6,9 @@
     "dependencies": {
         "System.Console": "4.0.0-beta-23504",
         "System.IO.FileSystem": "4.0.1-beta-23504",
+        "System.Threading": "4.0.11-beta-23504",
         "System.Diagnostics.Process": "4.1.0-beta-23504",
-        "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-beta-23504",
-
-        "Microsoft.NETCore.ConsoleHost": "1.0.0-beta-23504",
-        "Microsoft.NETCore.TestHost": "1.0.0-beta-23504"
+        "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-beta-23504"
     },
     "frameworks": {
         "dnxcore50": { }
