--- a/src/Microsoft.DotNet.ProjectModel/project.json
+++ b/src/Microsoft.DotNet.ProjectModel/project.json
@@ -11,7 +11,7 @@
     "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-beta-23504",
     "System.Security.Cryptography.Algorithms": "4.0.0-beta-23504",
 
-    "NuGet.Packaging": "3.2.0",
+    "NuGet.Packaging": "3.3.0-*",
 
     "Microsoft.Extensions.FileSystemGlobbing": "1.0.0-rc2-15791",
     "Microsoft.Extensions.JsonParser.Sources": {
