--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -4,6 +4,7 @@
     "shared": "**/*.cs",
 
     "dependencies": {
+        "System.AppContext": "4.0.0-beta-23504",
         "System.Console": "4.0.0-beta-23504",
         "System.IO.FileSystem": "4.0.1-beta-23504",
         "System.Threading": "4.0.11-beta-23504",
