--- a/src/Microsoft.DotNet.Tools.Compiler.Native/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler.Native/project.json
@@ -10,7 +10,7 @@
         "System.Console": "4.0.0-*",
         "System.Collections": "4.0.11-*",
       "System.Linq": "4.0.1-*",
-      "System.Linq.Expressions": "4.0.1-*",
+      "Microsoft.NETCore.TestHost": "1.0.0-*",
         "System.Diagnostics.Process": "4.1.0-*",
         "System.IO": "4.0.11-*",
         "System.IO.FileSystem": "4.0.1-*",
