--- a/src/Microsoft.DotNet.Tools.Compiler.Native/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler.Native/project.json
@@ -5,12 +5,12 @@
         "emitEntryPoint": true
     },
     "dependencies": {
-	"Microsoft.NETCore.Platforms":"1.0.1-beta-23504",
+        "Microsoft.NETCore.Platforms": "1.0.1-beta-23504",
         "Microsoft.NETCore.Runtime": "1.0.1-beta-23504",
         "System.Console": "4.0.0-beta-23504",
         "System.Collections": "4.0.11-beta-23504",
-      "System.Linq": "4.0.1-beta-23504",
-      "Microsoft.NETCore.TestHost": "1.0.0-beta-23504",
+        "System.Linq": "4.0.1-beta-23504",
+        "Microsoft.NETCore.TestHost": "1.0.0-beta-23504",
         "System.Diagnostics.Process": "4.1.0-beta-23504",
         "System.IO": "4.0.11-beta-23504",
         "System.IO.FileSystem": "4.0.1-beta-23504",
@@ -23,11 +23,17 @@
             "type": "build",
             "version": "1.0.0-*"
         },
-      "Microsoft.DotNet.ILCompiler": "1.0.1-*",
-      "Microsoft.DotNet.ObjectWriter": "1.0.2-*",
-      "Microsoft.DotNet.RyuJit": "1.0.0-*"
+        "Microsoft.DotNet.ILCompiler": "1.0.1-*",
+        "Microsoft.DotNet.ObjectWriter": "1.0.2-*",
+        "Microsoft.DotNet.RyuJit": "1.0.0-*"
     },
     "frameworks": {
         "dnxcore50": { }
+    },
+    "scripts": {
+        "postcompile": [
+            "../../scripts/build/place-binary \"%compile:OutputDir%/%project:Name%.dll\"",
+            "../../scripts/build/place-binary \"%compile:OutputDir%/%project:Name%.pdb\""
+        ]
     }
 }
