Convert dotnet-run to System.CommandLine

--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -21,7 +21,8 @@
     "Microsoft.Extensions.CommandLineUtils.Sources": {
       "type": "build",
       "version": "1.0.0-*"
-    }
+    },
+    "System.CommandLine" : "0.1.0-d111815-3"
   },
   "frameworks": {
     "dnxcore50": { }
