--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -4,14 +4,13 @@
     "shared": "**/*.cs",
 
     "dependencies": {
-        "System.AppContext": "4.0.0",
-        "System.Console": "4.0.0-beta-23504",
-        "System.IO.FileSystem": "4.0.1-beta-23504",
-        "System.Threading": "4.0.11-beta-23504",
-        "System.Diagnostics.Process": "4.1.0-beta-23504",
-        "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-beta-23504",
-
-        "Microsoft.DotNet.ProjectModel": { "target": "project" }
+      "System.AppContext": "4.0.0",
+      "System.Console": "4.0.0-beta-23504",
+      "System.IO.FileSystem": "4.0.1-beta-23504",
+      "System.Threading": "4.0.11-beta-23504",
+      "System.Diagnostics.Process": "4.1.0-beta-23504",
+      "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-beta-23504",
+      "Microsoft.DotNet.ProjectModel": "1.0.0"
     },
     "frameworks": {
         "dnxcore50": { }
