--- a/src/Microsoft.DotNet.Tools.Resgen/project.json
+++ b/src/Microsoft.DotNet.Tools.Resgen/project.json
@@ -1,5 +1,5 @@
 {
-    "name": "resgen",
+    "name": "dotnet-resgen",
     "version": "1.0.0-*",
     "compilationOptions": {
         "emitEntryPoint": true
