--- a/src/Microsoft.DotNet.Tools.Init/project.json
+++ b/src/Microsoft.DotNet.Tools.Init/project.json
@@ -5,6 +5,8 @@
         "emitEntryPoint": true
     },
     "dependencies": {
+        "Microsoft.NETCore.Runtime": "1.0.1-beta-23504",
+
         "System.Console": "4.0.0-beta-23504",
         "System.Collections": "4.0.11-beta-23504",
         "System.Linq": "4.0.1-beta-23504",
