dotnet-init --> dotnet new
Fixes issue #374

--- a/src/Microsoft.DotNet.Tools.New/project.json
+++ b/src/Microsoft.DotNet.Tools.New/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "name": "dotnet-init",
+    "name": "dotnet-new",
     "version": "1.0.0-*",
     "compilationOptions": {
         "emitEntryPoint": true
