--- a/src/Microsoft.DotNet.ProjectModel.Loader/project.json
+++ b/src/Microsoft.DotNet.ProjectModel.Loader/project.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
         "Microsoft.DotNet.ProjectModel": "1.0.0-*",
+        "System.AppContext": "4.0.1-beta-23504",
         "System.Runtime.Loader": "4.0.0-beta-23504"
     },
     "frameworks": {
