--- a/src/Microsoft.DotNet.Compiler.Common/project.json
+++ b/src/Microsoft.DotNet.Compiler.Common/project.json
@@ -2,12 +2,12 @@
     "version": "1.0.0-*",
 
     "dependencies": {
+        "NETStandard.Library": "1.0.0-rc2-23608",
+        "System.Linq": "4.0.1-rc2-23608",
         "System.CommandLine": "0.1.0-*",
-        "System.Linq": "4.0.1-beta-23504",
-        "System.Runtime": "4.0.21-beta-23504",
+        
         "Microsoft.DotNet.ProjectModel": "1.0.0-*"
     },
-
     "frameworks": {
         "dnxcore50": { }
     },
