--- a/src/Microsoft.DotNet.Runtime/project.json
+++ b/src/Microsoft.DotNet.Runtime/project.json
@@ -5,7 +5,8 @@
   },
 
   "dependencies": {
-    "Microsoft.NETCore.Runtime": "1.0.1-beta-23504"
+    "NETStandard.Library" : "1.0.0-rc2-23608",
+    "Microsoft.NETCore.Runtime": "1.0.1-rc2-23608"
   },
 
   "frameworks": {
