--- a/src/Microsoft.DotNet.Tools.Compiler.Csc/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler.Csc/project.json
@@ -5,11 +5,10 @@
         "emitEntryPoint": true
     },
     "dependencies": {
-        "System.Console": "4.0.0-beta-23504",
-        "System.Collections": "4.0.11-beta-23504",
-        "System.Linq": "4.0.1-beta-23504",
-        "System.Diagnostics.Process": "4.1.0-beta-23504",
-        "System.IO.FileSystem": "4.0.1-beta-23504",
+        "NETStandard.Library": "1.0.0-rc2-23608",
+        "System.Linq": "4.0.1-rc2-23608",
+        
+        "Microsoft.Net.Compilers.netcore": "1.2.0-beta-20151117-04",
 
         "Microsoft.DotNet.Cli.Utils": {
             "type": "build",
@@ -19,8 +18,7 @@
             "type": "build",
             "version": "1.0.0-*"
         },
-        "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
-        "Microsoft.Net.Compilers.netcore": "1.2.0-beta-20151117-04"
+        "Microsoft.DotNet.Compiler.Common": "1.0.0-*"
     },
     "frameworks": {
         "dnxcore50": { }
