--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -5,14 +5,10 @@
     "emitEntryPoint": true
   },
   "dependencies": {
-    "System.Console": "4.0.0-beta-23504",
-    "System.Collections": "4.0.11-beta-23504",
-    "System.Linq": "4.0.1-beta-23504",
-    "System.Diagnostics.Process": "4.1.0-beta-23504",
-    "System.IO.FileSystem": "4.0.1-beta-23504",
-    "System.AppContext": "4.0.1-beta-23504",
+    "NETStandard.Library": "1.0.0-rc2-23608",
+    "System.Linq": "4.0.1-rc2-23608",
     "System.Reflection.Metadata": "1.1.0",
-
+    
     "Microsoft.DotNet.ProjectModel": "1.0.0-*",
     "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
     "Microsoft.DotNet.Cli.Utils": {
