--- a/src/Microsoft.DotNet.Tools.New/project.json
+++ b/src/Microsoft.DotNet.Tools.New/project.json
@@ -5,14 +5,9 @@
         "emitEntryPoint": true
     },
     "dependencies": {
-        "Microsoft.NETCore.Runtime": "1.0.1-beta-23504",
+        "NETStandard.Library": "1.0.0-rc2-23608",
 
-        "System.Console": "4.0.0-beta-23504",
-        "System.Collections": "4.0.11-beta-23504",
         "System.Linq": "4.0.1-beta-23504",
-        "System.Diagnostics.Process": "4.1.0-beta-23504",
-        "System.IO.FileSystem": "4.0.1-beta-23504",
-        "System.AppContext": "4.0.1-beta-23504",
 
         "Microsoft.DotNet.ProjectModel": "1.0.0-*",
         "Microsoft.DotNet.Cli.Utils": {
