--- a/src/Microsoft.DotNet.Tools.Repl.Csi/project.json
+++ b/src/Microsoft.DotNet.Tools.Repl.Csi/project.json
@@ -5,12 +5,10 @@
         "emitEntryPoint": true
     },
     "dependencies": {
-        "System.Console": "4.0.0-beta-23504",
-        "System.Collections": "4.0.11-beta-23504",
+        "NETStandard.Library": "1.0.0-rc2-23608",
         "System.Linq": "4.0.1-beta-23504",
-        "System.Diagnostics.Process": "4.1.0-beta-23504",
-        "System.IO.FileSystem": "4.0.1-beta-23504",
-        "System.AppContext": "4.0.1-beta-23504",
+        
+        "Microsoft.Net.CSharp.Interactive.netcore": "1.2.0-beta-20151106-02",
 
         "Microsoft.DotNet.Cli.Utils": {
             "type": "build",
@@ -19,8 +17,7 @@
         "Microsoft.Extensions.CommandLineUtils.Sources": {
             "type": "build",
             "version": "1.0.0-*"
-        },
-        "Microsoft.Net.CSharp.Interactive.netcore": "1.2.0-beta-20151106-02"
+        }
     },
     "frameworks": {
         "dnxcore50": { }
