--- a/src/Microsoft.DotNet.ProjectModel.Loader/project.json
+++ b/src/Microsoft.DotNet.ProjectModel.Loader/project.json
@@ -1,4 +1,5 @@
 {
+    "version": "1.0.0-*",
     "dependencies": {
         "Microsoft.DotNet.ProjectModel": "1.0.0-*",
         "System.AppContext": "4.0.1-beta-23504",
