--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -11,6 +11,7 @@
     "System.Diagnostics.Process": "4.1.0-beta-23504",
     "System.IO.FileSystem": "4.0.1-beta-23504",
     "System.AppContext": "4.0.1-beta-23504",
+    "System.Reflection.Metadata": "1.1.0",
 
     "Microsoft.DotNet.ProjectModel": "1.0.0-*",
     "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
