--- a/src/Microsoft.DotNet.Tools.Resgen/project.json
+++ b/src/Microsoft.DotNet.Tools.Resgen/project.json
@@ -7,7 +7,7 @@
     "dependencies": {
         "NETStandard.Library": "1.0.0-rc2-23608",
         "System.Linq": "4.0.1-rc2-23608",
-        "System.Xml.XDocument": "4.0.11-beta-23504",
+        "System.Xml.XDocument": "4.0.11-rc2-23608",
         "System.Resources.ReaderWriter": "4.0.0-rc2-23608",
 
         "Microsoft.DotNet.Cli.Utils": {
