--- a/src/Microsoft.DotNet.Compiler.Common/project.json
+++ b/src/Microsoft.DotNet.Compiler.Common/project.json
@@ -5,8 +5,11 @@
         "NETStandard.Library": "1.0.0-rc2-23608",
         "System.Linq": "4.0.1-rc2-23608",
         "System.CommandLine": "0.1.0-*",
-        
-        "Microsoft.DotNet.ProjectModel": "1.0.0-*"
+        "Microsoft.DotNet.ProjectModel": "1.0.0-*",
+        "Microsoft.DotNet.Cli.Utils": {
+            "type": "build",
+            "version": "1.0.0-*"
+        },
     },
     "frameworks": {
         "dnxcore50": { }
