--- a/src/Microsoft.DotNet.Tools.Resgen/project.json
+++ b/src/Microsoft.DotNet.Tools.Resgen/project.json
@@ -10,6 +10,7 @@
         "System.Xml.XDocument": "4.0.11-rc2-23608",
         "System.Resources.ReaderWriter": "4.0.0-rc2-23608",
 
+        "Microsoft.CodeAnalysis.CSharp":  "1.1.1",
         "Microsoft.DotNet.Cli.Utils": {
             "type": "build",
             "version": "1.0.0-*"
