Add dependency model api

--- a/src/Microsoft.DotNet.ProjectModel/project.json
+++ b/src/Microsoft.DotNet.ProjectModel/project.json
@@ -19,6 +19,10 @@
         "Microsoft.Extensions.HashCodeCombiner.Sources": {
             "type": "build",
             "version": "1.0.0-*"
+        },
+        "Microsoft.Extensions.DependencyModel": {
+          "type": "build",
+          "version": "1.0.0-*"
         }
     },
 
