--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -16,6 +16,10 @@
     "Microsoft.Extensions.CommandLineUtils.Sources": {
       "type": "build",
       "version": "1.0.0-*"
+    },
+    "Microsoft.Extensions.DependencyModel": {
+      "type": "build",
+      "version": "1.0.0-*"
     }
   },
   "frameworks": {
