Adding a key to use for strong name signing of our assemblies and modifying the project.json of our projects to include that key.

--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -1,6 +1,10 @@
 ﻿{
     "version": "1.0.0-*",
 
+    "compilationOptions": {
+        "keyFile": "../../tools/Key.snk"
+    },
+
     "shared": "**/*.cs",
 
     "dependencies": {
