--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -1,31 +1,33 @@
 ﻿{
-  "name": "dotnet-compile",
-  "version": "1.0.0-*",
-  "compilationOptions": {
-    "emitEntryPoint": true
-  },
-  "dependencies": {
-    "NETStandard.Library": "1.0.0-rc2-23704",
-    "System.Reflection.Metadata": "1.1.0",
-    "Microsoft.DotNet.ProjectModel": "1.0.0-*",
-    "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
-    "Microsoft.DotNet.Cli.Utils": "1.0.0-*",
-    "Microsoft.Extensions.CommandLineUtils.Sources": {
-      "type": "build",
-      "version": "1.0.0-*"
+    "name": "dotnet-compile",
+    "version": "1.0.0-*",
+    "compilationOptions": {
+        "emitEntryPoint": true
     },
-    "Microsoft.Extensions.DependencyModel": {
-      "type": "build",
-      "version": "1.0.0-*"
+    "dependencies": {
+        "NETStandard.Library": "1.0.0-rc2-23704",
+        "System.Reflection.Metadata": "1.1.0",
+        "Microsoft.DotNet.ProjectModel": "1.0.0-*",
+        "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
+        "Microsoft.DotNet.Cli.Utils": "1.0.0-*",
+        "Microsoft.Extensions.PlatformAbstractions": "1.0.0-*",
+
+        "Microsoft.Extensions.CommandLineUtils.Sources": {
+            "type": "build",
+            "version": "1.0.0-*"
+        },
+        "Microsoft.Extensions.DependencyModel": {
+            "type": "build",
+            "version": "1.0.0-*"
+        }
+    },
+    "frameworks": {
+        "dnxcore50": { }
+    },
+    "scripts": {
+        "postcompile": [
+            "../../scripts/build/place-binary \"%compile:OutputDir%/%project:Name%.dll\"",
+            "../../scripts/build/place-binary \"%compile:OutputDir%/%project:Name%.pdb\""
+        ]
     }
-  },
-  "frameworks": {
-    "dnxcore50": { }
-  },
-  "scripts": {
-    "postcompile": [
-        "../../scripts/build/place-binary \"%compile:OutputDir%/%project:Name%.dll\"",
-        "../../scripts/build/place-binary \"%compile:OutputDir%/%project:Name%.pdb\""
-    ]
-  }
 }
