--- a/src/Microsoft.DotNet.Tools.Run/project.json
+++ b/src/Microsoft.DotNet.Tools.Run/project.json
@@ -7,7 +7,7 @@
     "dependencies": {
         "NETStandard.Library": "1.0.0-rc2-23616",
         
-        "Microsoft.Net.Compilers.netcore": "1.2.0-beta-20151224-03",
+        "Microsoft.Net.Compilers.netcore": "1.2.0-beta1-20151228-02",
         "System.CommandLine" : "0.1.0-d111815-3",
 
         "Microsoft.DotNet.ProjectModel": "1.0.0-*",
