--- a/src/Microsoft.DotNet.Tools.Compiler.Fsc/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler.Fsc/project.json
@@ -9,10 +9,7 @@
         
         "Microsoft.FSharp.Compiler.netcore": "1.0.0-alpha-151218",
 
-        "Microsoft.DotNet.Cli.Utils": {
-            "type": "build",
-            "version": "1.0.0-*"
-        },
+        "Microsoft.DotNet.Cli.Utils": "1.0.0-*",
         "Microsoft.Extensions.CommandLineUtils.Sources": {
             "type": "build",
             "version": "1.0.0-*"
