--- a/src/Microsoft.DotNet.Tools.Compiler.Csc/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler.Csc/project.json
@@ -9,10 +9,7 @@
         
         "Microsoft.Net.Compilers.netcore": "1.2.0-beta1-20151228-02",
 
-        "Microsoft.DotNet.Cli.Utils": {
-            "type": "build",
-            "version": "1.0.0-*"
-        },
+        "Microsoft.DotNet.Cli.Utils": "1.0.0-*",
         "Microsoft.Extensions.CommandLineUtils.Sources": {
             "type": "build",
             "version": "1.0.0-*"
