switch from DNX to cross-plat NuGet!

--- a/src/dotnet-restore/project.json
+++ b/src/dotnet-restore/project.json
@@ -11,7 +11,8 @@
     "emitEntryPoint": true
   },
   "dependencies": {
-    "Microsoft.NETCore.ConsoleHost": "1.0.0-beta-23409",
+    "NuGet.CommandLine.XPlat": "3.4.0-*",
+    "Microsoft.NETCore.Platforms": "1.0.1-rc2-23608",
     "NETStandard.Library": "1.0.0-rc2-23608",
     "System.Linq": "4.0.1-beta-23504",
     "System.Collections": "4.0.11-beta-23504",
