Introducing a new library to hold file system related abstractions. Making the E2E tests work with dotnet test

--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -9,7 +9,11 @@
         "NETStandard.Library": "1.0.0-rc2-23728",
         "Microsoft.DotNet.ProjectModel": "1.0.0-*",
         "System.Reflection.Metadata": "1.2.0-rc2-23728",
-        "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc2-16537"
+        "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc2-16537",
+        "Microsoft.DotNet.Files": {
+            "type": "build",
+            "version": "1.0.0-*"
+        }
     },
 
     "frameworks": {
@@ -17,6 +21,7 @@
             "imports": "portable-net45+win8"
         }
     },
+  
     "scripts": {
     }
 }
