--- a/src/Microsoft.DotNet.Files/project.json
+++ b/src/Microsoft.DotNet.Files/project.json
@@ -8,14 +8,8 @@
         "NETStandard.Library": "1.0.0-rc2-23811",
         "System.Linq.Expressions": "4.0.11-rc2-23811",
         "Microsoft.Extensions.FileSystemGlobbing": "1.0.0-rc2-15996",
-        "Microsoft.DotNet.Cli.Utils": {
-            "type": "build",
-            "version": "1.0.0-*"
-        },
-        "Microsoft.DotNet.ProjectModel": {
-            "type": "build",
-            "version": "1.0.0-*"
-        }
+        "Microsoft.DotNet.Cli.Utils": "1.0.0-*",
+        "Microsoft.DotNet.ProjectModel": "1.0.0-*"
     },
     "frameworks": {
         "dnxcore50": {
