Modifying the reporting channels to make the AdapterChannel a client and leave the TestRunnerChannel a server. This will prevent port conflicts between dotnet test and the Adapter (VS) due to race conditions.
Added E2E tests for dotnet test interactions with an adapter (design time).

--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -58,7 +58,8 @@
     "Microsoft.Win32.Registry": {
       "version": "4.0.0-rc2-23911",
       "exclude": "Compile"
-    }
+    },
+    "System.Net.NameResolution": "4.0.0-rc2-23911"
   },
   "frameworks": {
     "netstandardapp1.5": {
